--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,4 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-polars = { version = "0.44.2", features = ["abs", "dtype-struct", "lazy", "polars-ops"] }
+polars = { version = "0.44.2", features = ["polars-ops"] }
